@@ -1,4 +1,10 @@
 
+2019-10-31  Ron Norman <rjn@inglenet.com>
+
+	* fisam.c: Sets record size when doing OPEN INPUT
+	* fileio.c: More work on handing file formats being
+	         defined via the IO_asgname
+
 2019-10-29  Ron Norman <rjn@inglenet.com>
 
 	* fileio.c: Checks for filetype_OPTIONS (eg. IX, SQ, RL)
@@ -20,7 +26,7 @@
 
 	* fileio.c: split read/write dictionary routines for future uses
 	          RELATIVE file now returns status 14 for end of file
-	* fisam.c Fixed to use correct index of xISAM file
+	* fisam.c: Fixed to use correct index of xISAM file
 	      when only part of the indexed are defined in COBOL
 		  and keycheck=off
 
